src/qml/jsruntime/qv4managed_p.h
@@ -60,7 +60,7 @@ inline void qYouForgotTheQ_MANAGED_Macro(T1, T2) {}
 #define V4_NEEDS_DESTROY static void destroy(QV4::Heap::Base *b) { static_cast<Data *>(b)->~Data(); }
 
 
-#define V4_MANAGED(DataClass, superClass) \
+#define V4_MANAGED_ITSELF(DataClass, superClass) \
     public: \
         Q_MANAGED_CHECK \
         typedef QV4::Heap::DataClass Data; \
@@ -69,6 +69,12 @@ inline void qYouForgotTheQ_MANAGED_Macro(T1, T2) {}
         static inline const QV4::ManagedVTable *staticVTable() { return &static_vtbl; } \
         V4_MANAGED_SIZE_TEST \
         QV4::Heap::DataClass *d() const { return static_cast<QV4::Heap::DataClass *>(m); }
+
+#define V4_MANAGED(DataClass, superClass) \
+    private: \
+        DataClass() Q_DECL_EQ_DELETE; \
+        Q_DISABLE_COPY(DataClass) \
+        V4_MANAGED_ITSELF(DataClass, superClass)
 
 #define Q_MANAGED_TYPE(type) \
     public: \
@@ -125,7 +131,7 @@ const QV4::ManagedVTable classname::static_vtbl = DEFINE_MANAGED_VTABLE_INT(clas
 
 struct Q_QML_PRIVATE_EXPORT Managed : Value
 {
-    V4_MANAGED(Base, Managed)
+    V4_MANAGED_ITSELF(Base, Managed)
     enum {
         IsExecutionContext = false,
         IsString = false,
